// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddBlockForm: Component should render a block template with added elements 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="sc-bdnxRM jfLXjd"
  >
    <div
      className="sc-cxNHIi cATuCG"
      onClick={[Function]}
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Type
      </label>
      <input
        id="type"
        name="type"
        type="hidden"
        value={0}
      />
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          id="blockTypeSelect"
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                }
              }
            >
              (blank)
            </div>
          </div>
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "184px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 99,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              (blank)
            </div>
            <div
              id="select-item-1"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name
            </div>
            <div
              id="select-item-2"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 2
            </div>
            <div
              id="select-item-3"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 3
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-lmgQwP lkLtCK"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="sc-carFqZ gtxdrU"
  >
    <div
      className="sc-iTVJFM jSBkhj"
      id="tagsCounter"
    />
    0 Elements
    <div
      className="sc-iTVJFM jSBkhj"
    >
      <div
        className="sc-dlMDgC dfUbDZ"
      >
        <div
          className="sc-pNWdM gVThct"
        >
          <button
            disabled={false}
            id="createElement"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "30px",
                "color": "#000",
                "cursor": "pointer",
                "display": "flex",
                "fill": "#FFF",
                "fontSize": "20px",
                "height": 40,
                "justifyContent": "center",
                "margin": "0",
                "minHeight": 40,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 40,
              }
            }
            type="button"
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": 40,
                  "minHeight": 40,
                  "shapeRendering": "crispEdges",
                  "width": 40,
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <span>
     
  </span>
  <div
    className="sc-eCApnc xRYiU"
  >
    <div
      className="sc-gKAaRy VlDwf"
    >
      <div
        className="sc-jSFjdj ervdSK"
      >
        <button
          className="sc-iCoGMd iGTlng"
          disabled={false}
          id="backBtn"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          Back
        </button>
        <button
          className="sc-iCoGMd iGTlng"
          disabled={true}
          id="addBlock"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#71737e",
              "cursor": "default",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="submit"
        >
          Add
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`AddBlockForm: Component should render correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="sc-bdnxRM jfLXjd"
  >
    <div
      className="sc-cxNHIi cATuCG"
      onClick={[Function]}
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Type
      </label>
      <input
        id="type"
        name="type"
        type="hidden"
        value=""
      />
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          id="blockTypeSelect"
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                }
              }
            >
              Please select a type
            </div>
          </div>
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "184px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 99,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              (blank)
            </div>
            <div
              id="select-item-1"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name
            </div>
            <div
              id="select-item-2"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 2
            </div>
            <div
              id="select-item-3"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 3
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-lmgQwP lkLtCK"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="sc-eCApnc xRYiU"
  >
    <div
      className="sc-gKAaRy VlDwf"
    >
      <div
        className="sc-jSFjdj ervdSK"
      >
        <button
          className="sc-iCoGMd iGTlng"
          disabled={false}
          id="backBtn"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          Back
        </button>
        <button
          className="sc-iCoGMd iGTlng"
          disabled={true}
          id="addBlock"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#71737e",
              "cursor": "default",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="submit"
        >
          Add
        </button>
      </div>
    </div>
  </div>
</form>
`;
